# NarwalIntegration

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: validate.yml
custom_components/narwal/: __init__.py  binary_sensor.py  camera.py  config_flow.py  const.py  coordinator.py  entity.py  image.py  manifest.json  select.py  sensor.py  strings.json  vacuum.py
custom_components/narwal/narwal_client/: __init__.py  client.py  const.py  map_renderer.py  models.py  protocol.py
custom_components/narwal/translations/: en.json
narwal_client/: client.py  const.py  map_renderer.py  models.py
tests/: conftest.py  test_client.py  test_models.py  test_protocol.py
